--- a/pom.xml
+++ b/pom.xml
@@ -36,6 +36,7 @@
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <configuration>
+          <argLine>-Djdk.net.URLClassPath.disableClassPathURLCheck=true</argLine>
           <useSystemClassLoader>false</useSystemClassLoader>
         </configuration>
         </plugin>
